@@ -5,4 +5,5 @@
  * Fix biometric issues #724 #740 #731
  * Fix autofill #725 #551
  * Fix subdomain search #728
+ * Fix backup search #759
  * Small fixes and translations #732 #736 #737 #738 #742
